# rusty_proxy

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.mitm  LICENSE  README.md  docker-compose.yaml
certs/: ca.crt  ca.csr  ca.ext  ca.key  gen_ca.sh  rootCA.crt  rootCA.key  rootCA.srl
src/: config.rs  lib.rs  main.rs  middleware.rs
src/api/: handlers.rs  mod.rs
src/dto/: body.rs  hyper.rs  mod.rs  reqresp.rs  request.rs  response.rs
src/http/: mod.rs
src/http/parser/: mod.rs  primitives.rs  request.rs
src/proxy/: client.rs  middleware.rs  mod.rs  service.rs  utils.rs
src/scanner/: mod.rs
src/storage/: mod.rs  mongodb_storage.rs  storage.rs
src/storage/mongodb_storage/: dto_bindings.rs  mod.rs
