[package]
name = "rusty_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper= {version = "=1.6.0", features = ["full"]}
tokio = {version = "1", features = ["full"]}
hyper-util = {version = "0.1", features = ["full"]}
http-body-util = "0.1"
http = "1.3"
log = "0.4"
simplelog = "^0.12.0"
bytes = "1.10"
